<resources>
    <string name="app_name">discussion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="health_record">Health Record</string>
    <string name="immunization">Immunization</string>
    <string name="graphs">Graphs</string>
    <string name="measurement">Measurement</string>
    <string name="child_name">David</string>
    <string name="add_data">+ Add Data</string>
    <string name="count_months">24</string>
    <string name="date">15 Agustus 2021</string>
    <string name="count_kg">16,5</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="children_s_ages">Children\'s Ages</string>
    <string name="weight">Weight</string>
    <string name="date_now">Date Now</string>
    <string name="_24">24</string>
    <string name="add_data_add">Add Data</string>
    <string name="that_s_all_for_now">That\'s all for now!</string>
    <string name="parenting">Parenting</string>
    <string name="tough_topics">Tough Topics</string>
    <string name="preschool">Preschool</string>
    <string name="toodlers">Toodlers</string>
    <string name="behavior">Behavior</string>
    <string name="education">Education</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="infants">Infants</string>
    <string name="height">Height</string>
    <string name="head">Head</string>
    <string name="gender">Gender</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="birthday">Birthday</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="premature">Premature</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="save">Save</string>
    <string name="put_your_question_here">Put your question here...</string>
    <string name="growth">Growth</string>
    <string name="discussion">Discussion</string>
    <string name="recent_discussion">Recent Discussion</string>
    <string name="select_children">Select Children</string>
    <string name="comment">Comment</string>
    <string name="monts">Month\'s</string>
</resources>