<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".AddChildFragment">

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_child"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
            <ImageButton
                android:id="@+id/btn_back_child"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_back_foreground"
                android:background="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/growth"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_add_child"
            android:text="Add Children's Data"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_childrens_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="20dp"
            android:text="Children's Name"/>
        <EditText
            android:id="@+id/rt_childrens_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_name"
            android:textColor="@color/black"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_childrens_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rt_childrens_name"
            android:layout_marginTop="20dp"
            android:text="@string/gender"/>
        <RadioButton
            android:id="@+id/rb_childrens_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_gender"
            android:text="@string/boy"/>
        <RadioButton
            android:id="@+id/rb_childrens_girl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_gender"
            android:layout_toRightOf="@id/rb_childrens_boy"
            android:layout_marginLeft="100dp"
            android:text="@string/girl"/>
        <TextView
            android:id="@+id/tv_childrens_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_childrens_boy"
            android:layout_marginTop="20dp"
            android:text="@string/birthday"/>
        <EditText
            android:id="@+id/et_childrens_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_birthday"
            android:textColor="@color/black"
            android:inputType="date"/>
        <TextView
            android:id="@+id/tv_childrens_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_childrens_birthday"
            android:layout_marginTop="20dp"
            android:text="@string/weight"/>
        <TextView
            android:id="@+id/tv_childrens_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_childrens_birthday"
            android:layout_toRightOf="@id/tv_childrens_weight"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:text="@string/head"/>
        <TextView
            android:id="@+id/tv_childrens_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_childrens_birthday"
            android:layout_toRightOf="@id/tv_childrens_head"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="120dp"
            android:text="@string/height"/>
        <EditText
            android:id="@+id/tv_childrens_kg"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_weight"
            android:textColor="@color/black"
            android:inputType="number"/>
        <EditText
            android:id="@+id/tv_childrens_cmhead"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_weight"
            android:layout_toRightOf="@id/tv_childrens_kg"
            android:layout_marginLeft="95dp"
            android:textColor="@color/black"
            android:inputType="number"/>
        <EditText
            android:id="@+id/tv_childrens_cmheiht"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_height"
            android:layout_toRightOf="@id/tv_childrens_cmhead"
            android:layout_marginLeft="103dp"
            android:gravity="end"
            android:textColor="@color/black"
            android:inputType="number"/>
        <TextView
            android:id="@+id/tv_childrens_premature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_kg"
            android:layout_marginTop="20dp"
            android:text="@string/premature"/>
        <RadioButton
            android:id="@+id/rb_childrens_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_premature"
            android:text="@string/no"/>
        <RadioButton
            android:id="@+id/rb_childrens_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_premature"
            android:layout_toRightOf="@id/rb_childrens_no"
            android:layout_marginLeft="100dp"
            android:text="@string/yes"/>
        <TextView
            android:id="@+id/tv_childrens_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_childrens_no"
            android:layout_marginTop="20dp"
            android:text="@string/add_profile_photo"/>
        <EditText
            android:id="@+id/et_childrens_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_childrens_photo"
            android:textColor="@color/black"
            android:inputType="text"/>
        <Button
            android:id="@+id/bnt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_childrens_photo"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

    </RelativeLayout>

</ScrollView>