<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddDataFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/boy"
                    android:layout_gravity="end"/>
                <TextView
                    android:id="@+id/tv_child_name"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/child_name"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_bottom_arrow_foreground"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_ages"
            android:layout_below="@id/cv_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/children_s_ages"/>
        <EditText
            android:id="@+id/et_ages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ages"
            android:inputType="number"
            android:Hint="Months"/>
        <TextView
            android:id="@+id/tv_weight"
            android:layout_below="@id/tv_ages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/weight"/>
        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_weight"
            android:text="@string/_24"
            android:inputType="number"
            android:Hint="KG"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_below="@id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/date_now"/>
        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_date"
            android:layout_marginBottom="100dp"
            android:inputType="date"/>

        <Button
            android:id="@+id/btn_add_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_date"
            android:layout_margin="30dp"
            android:textAllCaps="false"
            android:text="@string/add_data_add"
            android:textColor="@color/white"/>
    </RelativeLayout>
</ScrollView>