<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GraphsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_graph"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
            <ImageButton
                android:id="@+id/btn_back_child"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_back"
                android:background="@color/white"/>
            <TextView
                style="@style/Title"
                android:text="@string/growth"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_graph_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_graph"
            android:text="@string/graphs"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_graph"
            android:layout_toRightOf="@id/tv_graph_title"
            android:gravity="end"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_all_children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="All Children's"
                android:textColor="@color/black"/>
            <ImageButton
                android:id="@+id/ib_drop_down"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_buttom"
                android:background="@color/white"/>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_graph_title"
            android:layout_marginTop="20dp">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_weight_graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/weight"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_height_graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/height"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_head_graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/head"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager_graph"
            android:layout_below="@id/tab_layout_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"/>
        <FrameLayout
            android:id="@+id/fl_graph_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pager_graph"/>
    </RelativeLayout>
</ScrollView>