<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HeightFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_weight_data"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:outlineAmbientShadowColor="@color/orange"
            android:background="@color/grey">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_count_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_months"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_count_months"
                    android:text="months"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_count_months"
                    android:text="@string/date"
                    android:textSize="12dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_date"
                    android:gravity="end"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_count_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:text="@string/count_kg"
                        android:textColor="@color/black"
                        android:textSize="17dp"/>
                    <TextView
                        android:id="@+id/tv_cm"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/cm"/>
                    <ImageView
                        android:id="@+id/iv_right_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_right"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>