<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GrowthFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_measurement"
            android:layout_below="@id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_measure"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/measure"/>
                <TextView
                    android:id="@+id/tv_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/measurement"
                    android:textSize="11sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_health"
            android:layout_below="@id/tv_menu"
            android:layout_toRightOf="@id/cv_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_health"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/health"/>
                <TextView
                    android:id="@+id/tv_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/health_record"
                    android:textSize="11sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_immunization"
            android:layout_below="@id/tv_menu"
            android:layout_toRightOf="@id/cv_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            card_view:cardElevation="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_immunization"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/immunization"/>
                <TextView
                    android:id="@+id/tv_immunization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/immunization"
                    android:textSize="11sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_graph"
            android:layout_below="@id/cv_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_graph"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/graph_child"/>
                <TextView
                    android:id="@+id/tv_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/graphs"
                    android:textSize="11sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>